# its_tk

./: CMakeLists.txt  main.c  notes  script
crap/: main_a.com  main_a.strings  main_b.com  main_b.strings
